--- a/src/app/pages/login-page/login-page.component.html
+++ b/src/app/pages/login-page/login-page.component.html
@@ -2,9 +2,9 @@
 
 <form [formGroup]="form" (ngSubmit)="submit()">
   <p class="label">Email Address:</p>
-  <input class="registrationInput" formControlName="email" type="text" />
+  <input class="primaryInput" formControlName="email" type="text" />
   <p class="label">Password:</p>
-  <input class="registrationInput" formControlName="password" type="password" />
+  <input class="primaryInput" formControlName="password" type="password" />
   <button class="submitBtn" type="submit">Login</button>
   <p>Not a member? <a routerLink="/sign_up">Sign up now</a></p>
 </form>
