fron-end: doc can see all his active appointments with detailed information (using click) in modal window; created menu, doc`s personal card with ability to make changes (dynamicaly loading profile pictire from instagram api); created core functionality for shop

--- a/src/app/components/alert/alert.component.scss
+++ b/src/app/components/alert/alert.component.scss
@@ -1,16 +1,16 @@
 .success {
-    background-color: #66BB6A,;
+  background-color: #66bb6a;
 }
 
 .warning {
-    background-color: #FFCA28;
+  background-color: #ffca28;
 }
 
 .error {
-    background-color: #EF5350;
+  background-color: #ef5350;
 }
 
 .alert {
-    padding: 20px;
-    color:#ffffff;
+  padding: 20px;
+  color: #ffffff;
 }
