--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -1,37 +1,6 @@
+<app-menu></app-menu>
+
 <div class="workspace">
-  <div class="authContainer">
-    <button class="btn" *ngIf="!auth.isAuth()" [routerLink]="['/login']">
-      Login &#8250;
-    </button>
-
-    <button
-      class="btn blackBtn"
-      *ngIf="!auth.isAuth()"
-      [routerLink]="['/sign_up']"
-    >
-      Join now
-    </button>
-
-    <button
-      class="btn blackBtn logout"
-      *ngIf="auth.isAuth()"
-      (click)="auth.logout()"
-    >
-      Log Out
-    </button>
-  </div>
-
-  <button *ngIf="auth.isAuth()" [routerLink]="['/user_requests']">
-    Your requests
-  </button>
-
-  <button
-    *ngIf="auth.isAuth() && auth.isAdmin()"
-    [routerLink]="['/all_requests']"
-  >
-    ALL requests
-  </button>
-
   <form [formGroup]="form" (ngSubmit)="submit()">
     <h2 class="description">Book a doctor`s consultation.</h2>
     <input
@@ -41,7 +10,7 @@
       placeholder="name"
     />
 
-    <p class="title">Pick any one:</p>
+    <p class="primaryLabel">Pick any one</p>
     <div class="animalSelectContainer">
       <input
         class="selectInput"
@@ -73,7 +42,7 @@
       />
       <label class="animalSelectLabel" for="other">Other pet</label>
     </div>
-    <p class="title">Select Date:</p>
+    <p class="primaryLabel">Select Date</p>
     <div class="dateSelectContainer">
       <div *ngFor="let date of dateValiants">
         <input
@@ -91,7 +60,7 @@
       </div>
     </div>
 
-    <select class="select" formControlName="time">
+    <select class="primarySelect" formControlName="time">
       <option disabled value="">Time</option>
       <option value="9">9:00</option>
       <option value="10">10:00</option>
@@ -115,7 +84,7 @@
       class="primaryInput"
       formControlName="comments"
       type="text"
-      placeholder="any comments?"
+      placeholder="describe problem"
     />
 
     <button class="btn blackBtn" type="submit">Book Now</button>
