--- a/src/app/pages/sign-up-page/sign-up-page.component.html
+++ b/src/app/pages/sign-up-page/sign-up-page.component.html
@@ -1,9 +1,17 @@
+<app-back-home></app-back-home>
 <h1>SIGN UP PAGE</h1>
 <p>signup-page works!</p>
 <form [formGroup]="form" (ngSubmit)="submit()">
+  <p class="primaryLabel">Email Address</p>
   <input class="primaryInput" formControlName="email" type="text" />
-  <input class="primaryInput" formControlName="password" type="password" placeholder="enter password"/>
-  <input class="primaryInput" formControlName="passwordConfirm" type="password" placeholder="confirm password"/>
+  <p class="primaryLabel">Password</p>
+  <input class="primaryInput" formControlName="password" type="password" />
+  <p class="primaryLabel">Confirm password</p>
+  <input
+    class="primaryInput"
+    formControlName="passwordConfirm"
+    type="password"
+  />
   <button type="submit">Sign up</button>
   <p>Not a member? <a routerLink="/login">Log in</a></p>
 </form>
