--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,3 @@
-/* You can add global styles to this file, and also import other style files */
 * {
   margin: 0;
   padding: 0;
@@ -8,6 +7,14 @@
 
 body {
   padding: 10px;
+  background-color: #f6f9fe;
+  color: #0a1429;
+}
+
+.sectionTitle {
+  font-size: 24px;
+  margin-bottom: 10px;
+  font-weight: 600;
 }
 
 .primaryInput {
@@ -22,12 +29,49 @@ body {
   outline: none;
   border-radius: 8px;
   color: #0d0c22;
+  background-color: #f1f1f3;
+  transition: background-color 200ms ease, outline 200ms ease, color 200ms ease,
+    box-shadow 200ms ease;
+
+  &:hover,
+  &:focus {
+    background-color: #ffffff;
+    border-color: rgba(234, 76, 137, 0.4);
+    box-shadow: 0 0 0 4px rgba(234, 76, 137, 0.1);
+  }
+
+  &.ng-invalid.ng-touched {
+    box-shadow: 0 0 0 4px rgba(231, 59, 59, 0.178);
+  }
+
+  &.ng-valid.ng-touched {
+    box-shadow: 0 0 0 4px rgba(59, 231, 136, 0.178);
+  }
+}
+
+.primaryLabel {
+  margin: 0 0 8px 0;
+  font-weight: 600;
+  font-size: 18px;
+}
+
+.primarySelect {
+  padding-left: 10px;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+  height: 35px;
+  margin: 0 40px 20px 0;
+  border-radius: 10px;
+  border: none;
+  color: #0d0c22;
   background-color: #f3f3f4;
   transition: background-color 200ms ease, outline 200ms ease, color 200ms ease,
     box-shadow 200ms ease;
 
   &:hover,
   &:focus {
+    outline: none;
     background-color: #ffffff;
     border-color: rgba(234, 76, 137, 0.4);
     box-shadow: 0 0 0 4px rgba(234, 76, 137, 0.1);
@@ -50,11 +94,24 @@ body {
   background-color: transparent;
   cursor: pointer;
   user-select: none;
+  margin: 0 10px;
+
+  :focus {
+    outline: none;
+  }
 }
 
-.btn:focus {
-  outline: none;
+.fullSizeBtn {
+  display: block;
+  border-radius: 20px;
+  padding: 12px 22px;
+  border-color: transparent;
+  cursor: pointer;
+  user-select: none;
+  width: 100%;
+  margin-bottom: 40px;
 }
+
 
 .blackBtn {
   border-color: black;
