front-end: user can filter shop items by animal type, category and search string. Created core functional for cart. Modified alert: can be closed on mobile devices (swipe down).Available number of items in shop depends on amount in cart and back-end data

--- a/src/app/components/alert/alert.component.html
+++ b/src/app/components/alert/alert.component.html
@@ -1,10 +1,11 @@
 <div
   *ngIf="text"
+  #contentPlaceholder
   class="alert"
   [class.success]="type === 'success'"
   [class.warning]="type === 'warning'"
   [class.error]="type === 'error'"
-  (click)="close()"
 >
+<div class="closure"></div>
   <p>{{ text }}</p>
 </div>
