--- a/src/app/components/shop-product/shop-product.component.scss
+++ b/src/app/components/shop-product/shop-product.component.scss
@@ -1,11 +1,11 @@
 .card {
-  max-width: 360px;
-  border: 3px solid #9b9b9b;
+  max-width: 350px;
+  box-shadow: 4px 2px 16px rgba(136, 165, 191, 0.48), -4px -2px 16px #ffffff;
   background-color: #fff;
   border-radius: 20px;
   padding: 12px;
-  min-height: 450px;
-  margin: 20px auto;
+  height: 500px;
+  margin: 30px auto;
   display: flex;
   flex-direction: column;
 }
@@ -50,34 +50,12 @@
   margin-bottom: 20px;
 }
 
-.controls {
-  display: flex;
-  align-self: stretch;
-  justify-content: space-between;
-  flex-basis: 100px;
-  align-items: center;
-  border: 2px solid #e4e2e2;
-  border-radius: 20px;
-}
-
-.controlBtn {
-  height: 30px;
-  width: 30px;
-  border: none;
-  background-color: transparent;
-  cursor: pointer;
-
-  &:focus {
-    outline: none;
-  }
-}
-
 .price {
   font-size: 26px;
   font-weight: 600;
 }
 
-.oneLeft {
+.outOfStock {
   flex-direction: row-reverse;
 }
 
