--- a/src/app/pages/create-product-page/create-product-page.component.html
+++ b/src/app/pages/create-product-page/create-product-page.component.html
@@ -17,7 +17,7 @@
     <option value="cats">Cat</option>
     <option value="dogs">Dog</option>
     <option value="fishes">Fish</option>
-    <option value="reptiles">Reptile</option>
+    <option value="rodents">Rodents</option>
     <option value="others">Other</option>
   </select>
 
