--- a/src/app/components/shop-product/shop-product.component.html
+++ b/src/app/components/shop-product/shop-product.component.html
@@ -7,27 +7,24 @@
   <p class="animal">This product for {{ item.animal }}</p>
   <p class="details">{{ item.details }}</p>
 
-  <div
-    class="amount"
-    [class.oneLeft]="item.available === 1 || item.available === 0"
-  >
-    <div *ngIf="item.available !== 0 && item.available !== 1" class="controls">
+  <div class="amount" [class.outOfStock]="item.available <= 0">
+    <div *ngIf="item.available > 0" class="controlGroup">
       <button [disabled]="previewMode" (click)="decrease()" class="controlBtn">
         -
       </button>
 
-      <span class="anountControl">{{ previewMode ? 1 : amount }}</span>
+      <span>{{ previewMode ? 1 : amount }}</span>
 
       <button [disabled]="previewMode" (click)="increase()" class="controlBtn">
         +
       </button>
     </div>
 
-    <p *ngIf="item.available !== 0" class="price">
+    <p *ngIf="item.available > 0" class="price">
       $ {{ sum ? sum : item.price }}
     </p>
 
-    <p *ngIf="item.available === 0" class="price">Out of stock</p>
+    <p *ngIf="item.available <= 0" class="price">Out of stock</p>
   </div>
 
   <div *ngIf="item.available !== 0" class="buttonsGroup">
