--- a/src/app/pages/login-page/login-page.component.html
+++ b/src/app/pages/login-page/login-page.component.html
@@ -1,11 +1,16 @@
-<app-back-home></app-back-home>
-<h2>Sign in to BLABLABLA</h2>
+<div class="pageWrapper">
 
-<form [formGroup]="form" (ngSubmit)="submit()">
-  <p class="primaryLabel">Email Address</p>
-  <input class="primaryInput" formControlName="email" type="text" />
-  <p class="primaryLabel">Password</p>
-  <input class="primaryInput" formControlName="password" type="password" />
-  <button class="submitBtn" type="submit">Login</button>
-  <p>Not a member? <a routerLink="/sign_up">Sign up now</a></p>
-</form>
+  <div class="banner"></div>
+
+  <div class="aside">
+    <form class="loginForm mainContainer" [formGroup]="form" (ngSubmit)="submit()">
+      <h2 class="header">Sign in to Pets Service App</h2>
+      <p class="primaryLabel">Email Address</p>
+      <input class="primaryInput" formControlName="email" type="text" />
+      <p class="primaryLabel">Password</p>
+      <input class="primaryInput" formControlName="password" type="password" />
+      <button class="submitBtn" type="submit">Login</button>
+      <p>Not a member? <a routerLink="/sign_up">Sign up now</a></p>
+    </form>
+  </div>
+</div>
