--- a/src/app/pages/login-page/login-page.component.scss
+++ b/src/app/pages/login-page/login-page.component.scss
@@ -1,19 +1,34 @@
-.submitBtn {
-  background: #ea4c89;
-  display: block;
-  width: 100%;
-  padding: 10px 16px;
-  border: none;
-  transition: all 200ms ease;
-  border-radius: 8px;
-  color: #ffffff;
-  font-size: 14px;
-  font-weight: 600;
-  line-height: 20px;
-  height: 40px;
-  user-select: none;
+.aside {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
 
-  &:disabled {
-    background: #faadcb;
+@media (min-width: 768px) {
+  .aside {
+    flex-basis: 65%;  
   }
+
+  .pageWrapper {
+    display: flex;
+  }
+
+  .banner {
+    height: 100vh;
+    flex-basis: 35%;
+    background-image: url("../../images/Yellow-in-Basic11.png");
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+  }
+
+  .submitBtn {
+    width: 50%;
+  }
+}
+
+.header {
+  font-size: 30px;
+  margin-bottom: 20px;
 }
