--- a/src/app/components/shop-product/shop-product.component.scss
+++ b/src/app/components/shop-product/shop-product.component.scss
@@ -4,7 +4,7 @@
   background-color: #fff;
   border-radius: 20px;
   padding: 12px;
-  height: 500px;
+  min-height: 500px;
   margin: 30px auto;
   display: flex;
   flex-direction: column;
