--- a/src/app/pages/doctors-account-page/doctors-account-page.component.html
+++ b/src/app/pages/doctors-account-page/doctors-account-page.component.html
@@ -1,7 +1,7 @@
 <app-back-home></app-back-home>
 
 <div class="container">
-  <div class="aside">
+  <div class="sideBar">
     <app-profile-card></app-profile-card>
     <app-active-appointments
       (showModalById)="showModal($event)"
