--- a/src/app/pages/login-page/login-page.component.html
+++ b/src/app/pages/login-page/login-page.component.html
@@ -1,9 +1,12 @@
 <div class="pageWrapper">
-
   <div class="banner"></div>
 
-  <div class="aside">
-    <form class="loginForm mainContainer" [formGroup]="form" (ngSubmit)="submit()">
+  <div class="aside mainContainer">
+    <form
+      class="loginForm "
+      [formGroup]="form"
+      (ngSubmit)="submit()"
+    >
       <h2 class="header">Sign in to Pets Service App</h2>
       <p class="primaryLabel">Email Address</p>
       <input class="primaryInput" formControlName="email" type="text" />
