--- a/src/styles.scss
+++ b/src/styles.scss
@@ -11,13 +11,15 @@ body {
 }
 
 .loginForm {
-  max-width: 450px;
+  max-width: 400px;
+  width: 100%;
 }
 
 .sectionTitle {
   font-size: 24px;
-  margin-bottom: 10px;
+  margin-bottom: 30px;
   font-weight: 600;
+  text-align: center;
 }
 
 .primaryInput {
@@ -57,6 +59,7 @@ body {
 }
 
 .primaryLabel {
+  display: block;
   margin: 0 0 8px 0;
   font-weight: 600;
   font-size: 18px;
@@ -118,7 +121,7 @@ select::-ms-expand {
   line-height: 20px;
   height: 40px;
   user-select: none;
-  margin-bottom: 10px;
+  margin-bottom: 20px;
   cursor: pointer;
 
   &:focus {
@@ -139,6 +142,20 @@ select::-ms-expand {
 
   :focus {
     outline: none;
+  }
+}
+
+.closeBtn {
+  height: 18px;
+  width: 18px;
+  border: none;
+  background-color: transparent;
+  cursor: pointer;
+  align-self: flex-end;
+  margin: 20px;
+
+  &:hover {
+    transform: scale(1.2);
   }
 }
 
@@ -175,6 +192,10 @@ select::-ms-expand {
   color: white;
 }
 
+.lastButton {
+  margin-bottom: 40px;
+}
+
 .mainContainer {
   padding: 0 10px;
 }
@@ -198,6 +219,7 @@ select::-ms-expand {
   border-radius: 20px;
   display: flex;
   flex-direction: column;
+  max-width: 700px;
 }
 
 .controlGroup {
@@ -220,4 +242,68 @@ select::-ms-expand {
   &:focus {
     outline: none;
   }
+}
+
+.aside {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
+@media (min-width: 768px) {
+  .aside {
+    flex-basis: 65%;
+  }
+
+  .pageWrapper {
+    display: flex;
+  }
+
+  .submitBtn {
+    width: 50%;
+  }
+}
+
+.header {
+  font-size: 30px;
+  margin-bottom: 20px;
+}
+
+.svgPlaceholder {
+  max-width: 400px;
+  margin: 0 auto;
+  margin-bottom: 20px;
+}
+
+.fullSizeSvgPlaceholder {
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+}
+
+.imgContainer {
+  height: 140px;
+  width: 140px;
+  margin-bottom: 20px;
+}
+
+.img {
+  border-radius: 15%;
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.text {
+  margin-bottom: 5px;
+  font-weight: 300;
+}
+
+.highlighted {
+  font-weight: 500;
 }
