--- a/src/app/components/alert/alert.component.scss
+++ b/src/app/components/alert/alert.component.scss
@@ -42,18 +42,28 @@
 }
 
 @keyframes bounce {
-  0%,
+  from,
   20%,
-  50%,
+  53%,
   80%,
-  100% {
-    top: 0px;
+  to {
+    animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
+    transform: translate3d(0, 0, 0);
   }
-  40% {
-    top: 2px;
+
+  40%,
+  43% {
+    animation-timing-function: cubic-bezier(0.755, 0.05, 0.855, 0.06);
+    transform: translate3d(0, -8px, 0);
   }
-  60% {
-    top: 4px;
+
+  70% {
+    animation-timing-function: cubic-bezier(0.755, 0.05, 0.855, 0.06);
+    transform: translate3d(0, -4px, 0);
+  }
+
+  90% {
+    transform: translate3d(0, -2px, 0);
   }
 }
 
