--- a/src/app/components/cart-item/cart-item.component.html
+++ b/src/app/components/cart-item/cart-item.component.html
@@ -1,13 +1,12 @@
-<div>
-  <div>
-    <img [src]="item.url" [alt]="item.name" />
+<div class="cartItem">
+  <div class="imgContiner"> 
+    <img class="img" [src]="item.url" [alt]="item.name" />
   </div>
-  <p>{{ item.name }}</p>
+  <p class="name">{{ item.name }}</p>
 
-  <div class="controlGroup">
+  <div class="controls">
     <button (click)="remove.emit(item.itemId)" class="controlBtn">-</button>
     <p>{{ item.amount }}</p>
     <button (click)="add.emit(item.itemId)" class="controlBtn">+</button>
   </div>
-  <button (click)="delete.emit(item.itemId)">DELETE</button>
 </div>
