--- a/src/app/pages/shop-page/shop-page.component.scss
+++ b/src/app/pages/shop-page/shop-page.component.scss
@@ -21,6 +21,25 @@
   width: 17px;
 }
 
+.cart {
+  display: flex;
+  flex-direction: column;
+  width: 70px;
+  height: 70px;
+  background-color: rgb(245, 148, 92);
+  border-radius: 50%;
+  padding: 10px;
+  position: fixed;
+  bottom: 36px;
+  right: 26px;
+  cursor: pointer;
+}
+
+.cartAmount {
+  display: flex;
+  justify-content: center;
+}
+
 @media (min-width: 768px) {
   .container {
     display: flex;
