front-end: provided lazy loading for all pages, changed preloading strategy

--- a/src/app/components/cart-empty-placeholder/cart-empty-placeholder.component.html
+++ b/src/app/components/cart-empty-placeholder/cart-empty-placeholder.component.html
@@ -1,6 +1,10 @@
 <div class="svgPlaceholder mainContainer fullSizeSvgPlaceholder">
   <h2 class="sectionTitle">Cart is empty, lets make shoping</h2>
-  <svg class="svgPlaceholder" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 773.41 637.6">
+  <svg
+    class="svgPlaceholder"
+    xmlns="http://www.w3.org/2000/svg"
+    viewBox="0 0 773.41 637.6"
+  >
     <defs>
       <style>
         .cls-1 {
