--- a/src/app/components/no-user-requests-placeholder/no-user-requests-placeholder.component.html
+++ b/src/app/components/no-user-requests-placeholder/no-user-requests-placeholder.component.html
@@ -1,7 +1,11 @@
 <div class="svgPlaceholder mainContainer fullSizeSvgPlaceholder">
   <h2 class="sectionTitle">You did not create any consultation requests</h2>
 
-  <svg class="svgPlaceholder" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 801.71 774.33">
+  <svg
+    class="svgPlaceholder"
+    xmlns="http://www.w3.org/2000/svg"
+    viewBox="0 0 801.71 774.33"
+  >
     <defs>
       <style>
         .cls-1 {
