--- a/src/app/pages/cart-page/cart-page.component.html
+++ b/src/app/pages/cart-page/cart-page.component.html
@@ -1,5 +1,9 @@
 <div class="cartContainer mainContainer">
-  <button *ngIf="cartItems.length !== 0" class="closeBtn" [routerLink]="['/shop']">
+  <button
+    *ngIf="cartItems.length !== 0"
+    class="closeBtn"
+    [routerLink]="['/shop']"
+  >
     <svg
       xmlns="http://www.w3.org/2000/svg"
       xmlns:xlink="http://www.w3.org/1999/xlink"
