--- a/src/app/pages/create-product-page/create-product-page.component.html
+++ b/src/app/pages/create-product-page/create-product-page.component.html
@@ -1,4 +1,4 @@
-<div class="mainContainer">
+<div class="mainContainer pageContainer">
   <app-back-home></app-back-home>
 
   <form [formGroup]="form" (ngSubmit)="submit()">
