--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -3,7 +3,12 @@
 
   <div class="homePageContainer">
     <div *ngIf="!mobileDevice" class="svgComponent">
-      <svg class="svg" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 487 377">
+      <svg
+        class="svg"
+        xmlns="http://www.w3.org/2000/svg"
+        fill="none"
+        viewBox="0 0 487 377"
+      >
         <defs />
         <path
           fill="#EBEBEB"
