--- a/src/app/components/back-home/back-home.component.html
+++ b/src/app/components/back-home/back-home.component.html
@@ -1,6 +1,6 @@
 <svg
   class="backSvg"
-  routerLink=""
+  [routerLink]="['']"
   xmlns="http://www.w3.org/2000/svg"
   xmlns:xlink="http://www.w3.org/1999/xlink"
   viewBox="0 0 512 512"
