--- a/src/styles.scss
+++ b/src/styles.scss
@@ -307,3 +307,16 @@ select::-ms-expand {
 .highlighted {
   font-weight: 500;
 }
+
+.logo {
+  height: 52px;
+  width: 52px;
+  position: fixed;
+  top: 20px;
+  left: 20px;
+  transition: all 200ms;
+
+  &:hover {
+    transform: scale(1.1);
+  }
+}
